# make-a-book

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  app.py  fly.toml  main.py  pyproject.toml  requirements.txt
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: ProgressBar.tsx  StepLayout.tsx
frontend/src/steps/: AudiobookStep.tsx  BookSetupStep.tsx  ChapterGenerationStep.tsx  OutlineReviewStep.tsx  VoiceSetupStep.tsx
frontend/src/types/: index.ts
src/make_a_book/: audiobook_generator.py  chapter_generator.py  outline_generator.py  tts_time_estimator.py
tests/: test_audio_time_estimate.py
